--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,4 @@ build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "x86_64-ineptos.json"
-
-[target.'cfg(target_os = "none")']
-runner = "bootimage runner"
+target = "./kernel/targets/x86_64-ineptos.json"
