--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,4 +3,4 @@ build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "./kernel/targets/x86_64-ineptos.json"
+target = "./targets/x86_64-ineptos.json"
