--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -11,10 +11,9 @@ override USER_VARIABLE = $(if $(filter $(origin $(1)),default undefined),$(eval 
 
 # Target architecture to build for. Default to x86_64.
 $(call USER_VARIABLE,KARCH,x86_64)
-override OUT := ./
 
 ifeq ($(RUST_TARGET),)
-    override RUST_TARGET := $(KARCH)-ineptos
+    override RUST_TARGET := $(KARCH)
 	ifeq ($(KARCH),riscv64)
     	override RUST_TARGET := riscv64gc-unknown-none-elf
 	endif
@@ -32,8 +31,8 @@ endif
 # Default target.
 .PHONY: all
 all:
-	RUSTFLAGS="-C relocation-model=static" cargo build --target ./targets/$(RUST_TARGET).json --profile $(RUST_PROFILE)
-	cp ../target/$(RUST_TARGET)/$(RUST_PROFILE_SUBDIR)/$$(cd ../target/$(RUST_TARGET)/$(RUST_PROFILE_SUBDIR) && find -maxdepth 1 -perm -111 -type f) kernel
+	RUSTFLAGS="-C relocation-model=static" cargo build --target ./targets/$(RUST_TARGET)-ineptos.json --profile $(RUST_PROFILE)
+	cp target/$(RUST_TARGET)-ineptos/$(RUST_PROFILE_SUBDIR)/$$(cd target/$(RUST_TARGET)-ineptos/$(RUST_PROFILE_SUBDIR) && find -maxdepth 1 -perm -111 -type f) kernel
 
 # Remove object files and the final executable.
 .PHONY: clean
@@ -42,4 +41,3 @@ clean:
 	rm -rf kernel
 
 .PHONY: distclean
-distclean: clean
