--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,14 +1,7 @@
 [package]
-name = "ineptOS"
+name = "limine-rust-template"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 limine = "0.3.1"
-
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
