--- a/limine.conf
+++ b/limine.conf
@@ -1,8 +1,8 @@
 # Timeout in seconds that Limine will use before automatically booting.
-timeout: 5
+timeout: 3
 
 # The entry name that will be displayed in the boot menu.
-/IneptOS
+/Limine Template
     # We use the Limine boot protocol.
     protocol: limine
 
