--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,12 @@ Cargo.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Added by cargo
-*.iso
 /bin
 /ovmf
+/bin/*
+/ovmf/*
 **/target
 /limine
 /bin
+/limine/*
+/bin/*
